--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +13,7 @@
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.7.4",
+    "react-icons": "^4.2.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
